--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 
 <script>
-  location.replace("https://cash-kade.github.io/ANTIcorruptionNharassment/homepage.html")
+  location.replace("https://cash-kade.github.io/CandH/homepage.html")
 </script>
 
 </body>
